--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.3",
     "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "angular-datatables": "^11.0.2",
     "bootstrap": "^4.5.1",
     "chart.js": "^2.9.4",
@@ -29,7 +30,10 @@
     "datatables.net-dt": "^1.10.23",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-avatar": "^4.1.0",
     "popper.js": "^1.16.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.0.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^10.14.0",
     "tslib": "^1.10.0",
