--- a/package.json
+++ b/package.json
@@ -24,19 +24,28 @@
     "angular-cli-ghpages": "^1.0.0-rc.2",
     "angular-datatables": "^11.0.2",
     "bootstrap": "^4.5.1",
+    "calendar-utils": "^0.9.0",
     "chart.js": "^2.9.4",
-    "datatables.net": "^1.10.23",
+    "chartjs-test-utils": "^0.3.1",
+    "coordinate-systems": "^2.0.0",
+    "datatables.net": "^1.11.4",
     "datatables.net-bs4": "^1.10.23",
-    "datatables.net-dt": "^1.10.23",
+    "datatables.net-buttons": "^2.2.2",
+    "datatables.net-buttons-dt": "^2.2.2",
+    "datatables.net-dt": "^1.11.4",
+    "esm-helper": "^1.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "jszip": "^3.7.1",
+    "luxon": "^2.3.0",
     "ngx-avatar": "^4.1.0",
     "popper.js": "^1.16.1",
     "primeicons": "^4.1.0",
-    "primeng": "^12.0.0",
+    "primeng": "^12.2.3",
     "rxjs": "~6.4.0",
     "sweetalert2": "^10.14.0",
     "tslib": "^1.10.0",
+    "utils": "^0.3.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -45,6 +54,7 @@
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
     "@types/datatables.net": "^1.10.19",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.5",
